--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 | (_| | |   \ V / (_| | | | | (_| |
  \__,_|_|    \_/ \__,_|_| |_|\__,_|
 </pre>
-            <a href="http://github.com/BlasterJoni">github</a>
+            <a href="https://github.com/BlasterJoni">github</a>
             |
-            <a href="http://twitter.com/BlasterJoni">twitter</a>
+            <a href="https://twitter.com/BlasterJoni">twitter</a>
             |
-            <a href="http://instagram.com/BlasterJoni">instagram</a>
+            <a href="https://instagram.com/BlasterJoni">instagram</a>
             |
             <a href="https://www.linkedin.com/in/blasterjoni/">linkedin</a>
         </div>
